--- a/20250211-login-test.html
+++ b/20250211-login-test.html
@@ -2,6 +2,7 @@
 <html lang="zh-TW">
 
 <head>
+    <base href="/202504web/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2ND BOOK - 二手書交易網站</title>
