--- a/20250211-login-test.html
+++ b/20250211-login-test.html
@@ -723,7 +723,7 @@
                 <div class="col-md-6 book-showcase animate-on-scroll" data-delay="200">
                     <div class="book-carousel">
                         <div class="book-item myrollerl">
-                            <img src="/image/book1.jpg" alt="暢銷二手書" class="img-fluid book-cover">
+                            <img src="image/book1.jpg" alt="暢銷二手書" class="img-fluid book-cover">
                             <div class="rollerl">
                                 <div class="book-details">
                                     <h4 class="fw-600" style="color: var(--mycolor10);">如果我能和我的年少時光聊聊</h4>
